# hackaton_finance_team2

./: pyproject.toml
